2012-03-24  Araki Ken  <arakiken@users.sf.net>

	* MLTerm.java:
	  After display is disposed, font and color objects are disposed, too.

	* MLTermApplet.java:
	  lineHeightChanged -> cellSizeChanged

	* xlib/x_imagelib.c, tool/mlimgloader/main.c:
	  <X11/Xlib.h> is included.

2012-03-23  Araki Ken  <arakiken@users.sf.net>

	* kik_types.h, kik_def.h, xlib/x_imagelib.c:
	  SIZE_MAX is defined in kik_def.h, not in kik_types.h to fix a compilation
	  error in x_imagelib.c. (SF Bug #3509744)
	  (Thanks to Thomas Wolff)

	* ml_vt100_parser.c:
	  "\x1b[0;96;0c" is returned as the value of Secondary DA in order for
	  vim to decide ttymouse=xterm2 automatically.

	* MLTerm.java:
	  Drag&Drop is supported.

	* MLTerm.java, MLTermPtyListener.java, MLTermPty.c:
	  Audible bell is supported.

	* MLTerm.java, MLTermPty.java, MLTermPty.c:
	  "fg_color", "bg_color" options are supported.
	  (MLTermPty.getColorRGB() method is added.)

	* MLTerm.java, MLTermPty.c, MLTermPty.java:
	  Mouse tracking sequences ("CSI ? 1000 h/l", "CSI ? 1002 h/l"
	  and "CSI ? 1003 h/l") are supported.

	* mltermlet.html:
	  Meta tags to disable cache is added.

2012-03-21  Araki Ken  <arakiken@users.sf.net>

	* MLTerm.java: getProperty() method is added to apply configuration in
	  ~/.mlterm/main.

	* MLTerm.java, MLTermPtyListener.java, MLTermPty.c:
	  - Lines are scrolled out only if not line_scrolled_out but
	    window_scroll_upward_region of ml_screen_event_listenert is called.
	    (Fixed failure of 7th test of vttest test type 2.)
	  - resize() of ml_xterm_event_listener_t is implemented and
	    MLTerm handles resize event of MLTermPtyListener to support
	    "CSI ? 3 h", "CSI ? 3 l", "CSI 4 t" and "CSI 8 t".

	* MLTermPty.c:
	  If next line is modified, set mog_beg = 0 in
	  Java_mlterm_MLTermPty_nativeGetRedrawString() to enable combining
	  modified characters in current line and next line and to decrease
	  the number of calling replaceTextRange().
